Logo on mobile fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -333,8 +333,7 @@ canvas {
 .web3-ui__mobile-logo-wrap {
   position: relative;
   height: 42px;
-  display: flex;
-  align-items: center;
+  display: block;
 }
 
 .web3-ui__mobile-menu-button {
@@ -673,6 +672,10 @@ canvas {
     width: auto;
     height: 24px;
     display: block;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(calc(-50% + 4px));
   }
 
   .web3-ui__body {
